[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas_utils"
version = "0.1.0"
authors = [
    { name="Fred Zhao", email="zhaop@hhmi.org" },
]
description = "A package for interacting with the zebrafish brain atlas."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "tifffile",
    "matplotlib",
    "scipy",
]
